--- a/app.sass
+++ b/app.sass
@@ -1,4 +1,9 @@
+*
+  font-family: "Bodoni Moda", serif
+  scroll-behavior: smooth
+
 html, body
+  margin-top: 50px
   background-color: #01142E
 
 ///////////////////////////
@@ -8,14 +13,24 @@ $gold: #EBDE88
 
 
 ///////////////////////////
-////////// VAR ///////////
+//////// SPACER ///////////
 /////////////////////////
 
 .spacer
-  margin: 10px 0 10px 35%
-  height: 3px
-  background: $gold
-  width: 30%
+  display: flex
+  justify-content: center
+  width: 100%
+  margin: 10px 0
+  &-line
+    background-color: $gold
+    width: 40%
+    height: 3px
+    border-radius: 5px
+  &-inital
+    background-color: $gold
+    width: 100%
+    height: 3px
+    border-radius: 5px
 
 ///////////////////////////
 ///////// HEADER /////////
@@ -29,16 +44,15 @@ header
       transform: rotateY(180deg)
     h1
       margin: auto 0
-      font-family: "Bodoni Moda", serif
-      font-size: 30px
+      font-size: 2.75em
       color: white
   .header
     ul
       display: flex
       justify-content: center
-      margin-top: 0
+      margin: 0
+      padding: 0
       li
-        font-family: "Bodoni Moda", serif
         list-style: none
         a
           color: white
@@ -50,3 +64,119 @@ header
         background-color: $gold
         width: 2px
         margin: 0 10px
+
+///////////////////////////
+/////// CARROUSEL ////////
+/////////////////////////
+$imgWidth: 370px
+
+#carrousel
+  display: flex
+  justify-content: center
+  margin: 50px 0
+  .left, .right
+    position: relative
+    display: flex
+    overflow: hidden
+    height: 158px
+  .left, .right
+    width: $imgWidth
+    overflow: hidden
+    img
+      width: $imgWidth
+    .leftBlock, .rightBlock
+      display: flex
+      position: absolute
+      left: $imgWidth
+      animation: 14s test alternate infinite
+      animation-fill-mode: forwards
+      animation-timing-function: ease-in-out
+
+/// ANIMATION
+
+@keyframes test
+  from
+    left: 0
+
+  20%
+    left: 0
+
+  25%
+    left: -$imgWidth
+
+  45%
+    left: -$imgWidth
+
+  50%
+    left: $imgWidth * -2
+
+  70%
+    left: $imgWidth * -2
+
+  75%
+    left: $imgWidth * -3
+
+  90%
+    left: $imgWidth * -3
+
+  95%
+    left: $imgWidth * -4
+
+  to
+    left: $imgWidth * -4
+
+
+
+
+@keyframes transitionReverse
+  from
+    left: 0
+
+  to
+    left: -100%
+
+///////////////////////////
+////////// PAGE //////////
+/////////////////////////
+
+.section-product
+  margin: 0 30%
+  color: white
+  .spacer
+    margin: 10px 0 10px 0
+    width: 100%
+  h2
+    text-align: center
+    margin-bottom: 0
+  .list-products
+    .title-cat
+      font-weight: 400
+      margin: 10px 0
+      text-align: center
+    .product
+      display: flex
+      justify-content: space-between
+      margin-bottom: 5px
+    .productMarge
+      margin-bottom: 9px
+  p, span
+    line-height: 100%
+  p
+    margin: 1px 0
+  span
+    position: relative
+    font-style: italic
+    top: -9px
+    font-size: 80%
+    margin-top: 0
+
+
+// RESPONSIVE
+
+@media (min-width: 426px) and (max-width: 1025px)
+  .section-product
+    margin: 0 10%
+
+@media (max-width: 426px)
+  p
+    font-size: 500px
